--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
     "@mui/x-charts": "^6.19.5",
+    "@ramonak/react-progress-bar": "^5.2.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-switch": "^7.0.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
